# qbittorrent-seed-cache

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.example.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  test-build.yml
docs/: architecture.md
src/qbittorrent_seed_cache/: __init__.py  __main__.py  config.py  daemon.py  healthcheck.py  hotness.py  logging_setup.py  mover.py  paths.py  qbit_client.py  quota.py  reconcile.py  recovery.py  resolver.py  selector.py  state.py  symlinks.py
tests/: test_aggregation.py  test_hotness.py  test_paths.py  test_reconcile.py  test_recovery.py  test_resolver.py  test_selector.py  test_symlinks.py  test_tick_integration.py
tools/: migrate-hardlinks-to-symlinks.py  post-import.sh  register-custom-script.sh
