[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbittorrent-seed-cache"
version = "0.1.0"
description = "Hot/cold SSD cache for qBittorrent seeds — let your bulk-storage HDDs spin down while keeping active torrents fast."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eros Nardi" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
qbittorrent-seed-cache = "qbittorrent_seed_cache.__main__:main"

[project.urls]
Homepage = "https://github.com/Nardo86/qbittorrent-seed-cache"
Issues = "https://github.com/Nardo86/qbittorrent-seed-cache/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qbittorrent_seed_cache"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
